# web-wisecan-unified

./: .gitattributes  .gitignore  CLAUDE.md
.claude/backend/: README.md  architecture.md  conventions.md  principles.md  stack.md
.claude/commands/: back-refactor.md  code-review.md  front-init-project.md  front-new-feature.md  front-refactor.md  front-test.md  pr.md
.claude/devops/: README.md  build-run.md  environments.md  observability.md
.claude/frontend/: README.md  architecture.md  conventions.md  principles.md  stack.md
.claude/rules/: backend-conventions.md  frontend-architecture.md  frontend-conventions.md  frontend-library-stack.md  pm-sprint-operations.md  uiux-design-system.md  uiux-figma-plugin-rules.md
backend/: .dockerignore  .gitignore  Dockerfile  build.gradle  docker-compose.yml  gradlew  gradlew.bat  settings.gradle
cli/: README.md  build.cmd  build.sh  package.json
cli/src/: index.js
frontend/: package.json  pnpm-lock.yaml  tsconfig.json
infra/: .gitignore  README.md  docker-compose.observability.yml
pm/: 01_PRD.md  02_FEATURE_SPEC.md  03_IA.md  04_PROJECT_PLAN.md  05_DATA_MODEL.md  06_OBSERVABILITY.md  07_WBS.html  CLAUDE.md  MASTER_PLAN.md  REVISION-2026-06-15.html  SPRINT_01_PLAN.md  SPRINT_02_PLAN.md  WBS.md
sdk/python/: README.md  pyproject.toml
sdk/python/src/wisecan/: __init__.py  client.py  exceptions.py  http.py  models.py
sdk/python/src/wisecan_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/python/tests/: test_client.py  test_exceptions.py  test_http.py  test_models.py
uiux/: CLAUDE.md
(+698 files in other folders)
