[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wisecan-sdk"
version = "0.1.0"
description = "WiseCan 통합 메시징 서비스 Python SDK — SMS/LMS/MMS/카카오/RCS 발송"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["sms", "messaging", "wisecan", "kakao", "rcs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/beanteacher/web-wisecan-unified"
Documentation = "https://docs.wisecan.io/sdk/python"
Repository = "https://github.com/beanteacher/web-wisecan-unified"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
